# espeak-py

./: .gitmodules  Cargo.toml  LICENSE  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: build.yml  publish.yml
src/: lib.rs
tools/: build.sh
