[package]
name = "espeak-py"
version = "0.1.0"
authors = ["Benjamin Levin <ben@poly-ai.com>"]
edition = "2018"
description = "Python bindings for a very narrow subset of espeak"

[lib]
name = "espeak_py"
crate-type = ["cdylib"]

[dependencies]
espeak-sys = { path = "./espeak-sys" }
libc = "0.2"
parking_lot = "0.11"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
