[build-system]
requires = ["maturin>=0.10,<0.11"]
build-backend = "maturin"

[project]
name = "espeak_py"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust"
]
python = "^3.6"
homepage = "https://github.com/PolyAI-LDN/espeak-py"
repository = "https://github.com/PolyAI-LDN/espeak-py"
license = { file = "LICENSE" }
